--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                         <br>
                         <br>
                         <br>
-                        <p class="footer__logo-text">
+                        <p class="footer__logo-text"></p>
                         <div class="header__list-item"> <a class="header__list-link" href="#main-section">Домой</a> </div>
                         <br>
                         <div class="header__list-item"> <a class="header__list-link" href="#project-section">Проекты</a> </div>
